# fastqcheck

./: .travis.yml  AUTHORS  INSTALL  README  configure.ac  fastqcheck.c
src/: Makefile.am  fastqcheck.c
